# pySailingVLM

./: .gitignore  Makefile  README.md  environment.yml  expected_df_components.csv  expected_df_components_vlm.csv  expected_df_integrals.csv  expected_gamma_magnitute_vlm.csv  requirements.txt  seeme.md  setup.cfg  setup.py  test_me.py  test_me2.py
.circleci/: config.yml
Examples/: aircraft_wing_planform.py  jib_and_main_sail_vlm_runner.py
Examples/InputData/: jib_and_main_sail_vlm_case.py
Inlet/: InletConditions.py  Winds.py
ResultsContainers/: InviscidFlowResults.py  save_results_utils.py
Rotations/: CSYS_transformations.py
Solver/: Interpolator.py  Panel.py  PanelsPlotter.py  TrailingEdgePanel.py  forces.py  mesher.py  trailingedgepanel.py  vlm_solver.py  vortices.py
ThinAirfoil/: naca_plot_foil_example.py  read_xfoil_to_pd.py  xfoil_module.py
YachtGeometry/: HullGeometry.py  SailFactory.py  SailGeometry.py
pySailingVLM/: __main__.py  variables.py
pySailingVLM/examples/: aircraft_wing_planform.py  bertin-part-1.ipynb  bertin-part-2.ipynb  bertin-zuza.ipynb  bertin.ipynb  falkner-table26.ipynb  falkner_comparion.ipynb  flat.ipynb  flat_plate_inclined_wind_x.ipynb  flat_plate_wind_inclined.ipynb  jib_and_main_sail_vlm_runner.py  katz.ipynb  rc44-convergence.ipynb  rc44.ipynb  rectangle_variables.py  sailingvlm_example-c-tests-debug.ipynb  sailingvlm_example-c-tests.ipynb  sailingvlm_example.ipynb  sweep_example.ipynb  sweep_variables.py  testy.ipynb  variables.py
pySailingVLM/examples/input_data/: prostokat.py
pySailingVLM/inlet/: inlet_conditions.py  winds.py
pySailingVLM/results/: inviscid_flow.py  save_utils.py
pySailingVLM/rotations/: csys_transformations.py
pySailingVLM/runner/: aircraft.py  cli.py  container.py  sail.py
pySailingVLM/solver/: additional_functions.py  coefs.py  forces.py  mesher.py  panels.py  panels_plotter.py  velocity.py  vlm.py
pySailingVLM/tests/: test_coefs.py  test_forces.py  test_geometry_rotations.py  test_jib_and_main_sail_vlm_runner.py  test_mesher.py  test_panels.py  test_raw_vlm_solver.py  test_trailingedge.py  test_validation.py  test_velocity.py  test_vlm_airfoil.py
pySailingVLM/tests/input_files/: airfoils_coordinates.xlsx  expected_components_vlm.csv  expected_gamma_magnitute_vlm.csv  expected_integrals_vlm.csv
pySailingVLM/thin_airfoil/: vlm_airfoil.py
pySailingVLM/yacht_geometry/: hull_geometry.py  sail_factory.py  sail_geometry.py
results_example_jib_and_mainsail/2022-02-23_10h26m07s/: Results.xlsx
results_example_jib_and_mainsail/2022-02-23_10h27m58s/: Results.xlsx
results_example_jib_and_mainsail/2022-02-23_10h36m30s/: Results.xlsx
results_example_jib_and_mainsail/2022-02-23_10h51m57s/: Results.xlsx
results_example_jib_and_mainsail/2022-02-23_11h01m06s/: Results.xlsx
results_example_jib_and_mainsail/2022-02-23_11h07m00s/: Results.xlsx
results_example_jib_and_mainsail/2022-02-23_11h21m35s/: Results.xlsx
results_example_jib_and_mainsail/2022-02-23_11h22m47s/: Results.xlsx
sailingVLM/: __main__.py  __main__.py.new_approach
sailingVLM/Examples/: aircraft_wing_planform.py  jib_and_main_sail_vlm_runner.py
sailingVLM/Examples/InputData/: jib_and_main_sail_vlm_case.py  jib_and_main_sail_vlm_case_backflow.py
sailingVLM/Inlet/: InletConditions.py  Winds.py
sailingVLM/NewApproach/: jit_nogil_tests.py  jit_paralell_loop.py  jit_testy.py  mesher.py  panels.py  points.npy  vlm.py  vlm_logic.py
sailingVLM/ResultsContainers/: InviscidFlowResults.py  save_results_utils.py
sailingVLM/Rotations/: CSYS_transformations.py  geometry_calc.py
sailingVLM/Solver/: Interpolator.py  Panel.py  PanelsPlotter.py  TrailingEdgePanel.py  coeff_formulas.py  forces.py  mesher.py  vlm_solver.py  vortices.py
sailingVLM/YachtGeometry/: HullGeometry.py  SailFactory.py  SailGeometry.py
sailingVLM/tests_VLM/: test_forces.py  test_geometry_rotations.py  test_jib_and_main_sail_vlm_runner.py  test_mesher.py  test_new_approach.py  test_panels.py  test_raw_vlm_solver.py  test_time_comparison.py  test_vlm_logic.py  test_vortices.py
sailingVLM/tests_VLM/InputFiles/: case_data_for_vlm_runner.py  expected_df_integrals.csv
sailing_vlm/: __main__.py
sailing_vlm/examples/: aircraft_wing_planform.py  jib_and_main_sail_vlm_runner.py
sailing_vlm/examples/input_data/: jib_and_main_sail_vlm_case.py  prostokat.py  sweep.py
sailing_vlm/inlet/: inlet_conditions.py  winds.py
sailing_vlm/results/: inviscid_flow.py  save_utils.py
sailing_vlm/rotations/: csys_transformations.py  geometry_calc.py
sailing_vlm/runner/: aircraft.py  cli.py  sail.py
sailing_vlm/solver/: additional_functions.py  coefs.py  forces.py  interpolator.py  mesher.py  panels.py  panels_plotter.py  velocity.py  vlm.py
sailing_vlm/tests/: test_CL_CD_from_coeff.py  test_coefs.py  test_forces.py  test_geometry_rotations.py  test_jib_and_main_sail_vlm_runner.py  test_mesher.py  test_new_approach.py  test_panels.py  test_panels_new.py  test_raw_vlm_solver.py  test_trailingedge.py  test_validation.py  test_velocity.py  test_vlm_airfoil.py  test_vortices.py
sailing_vlm/tests/input_files/: case_data_for_vlm_runner.py  expected_df_components_vlm.csv  expected_df_inlet_IC_vlm.csv  expected_df_integrals_vlm.csv  expected_gamma_magnitute_vlm.csv
sailing_vlm/thin_airfoil/: Polar_naca9220_-10.0_9.8  naca_plot_foil_example.py  propose_section.py  vlm_airfoil.py  xfoil_example.py
sailing_vlm/yacht_geometry/: hull_geometry.py  sail_factory.py  sail_geometry.py
tests_VLM/: test_forces.py  test_geometry_rotations.py  test_jib_and_main_sail_vlm_runner.py  test_mesher.py  test_panels.py  test_raw_vlm_solver.py  test_trailingedge.py  test_vortices.py
tests_VLM/InputFiles/: case_data_for_vlm_runner.py  expected_df_components.csv  expected_df_components_llt.csv  expected_df_components_vlm.csv  expected_df_inlet_IC_llt.csv  expected_df_integrals.csv  expected_df_integrals_llt.csv  expected_df_integrals_vlm.csv  expected_gamma_magnitute_llt.csv  expected_gamma_magnitute_vlm.csv
