[metadata]
name = pySailingVLM
version = 1.0.7
author = Grzegorz Gruszczynski, Zuzanna Wieczorek
#author_email = your@email.address
url = https://zuza3012.github.io/vlmbook/intro.html
description = 'Vortex Lattice Method for initial aerodynamic analysis of upwind sails.'
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Vortex Lattice Method, VLM, initial sail analysis, yacht engineering
#license = BSD 3-Clause License
python_requires = >=3.10
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Physics
    Topic :: Education
    Framework :: Jupyter
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Operating System :: POSIX :: Linux

[options]
packages = find_namespace:
zip_safe = True
include_package_data = True
install_requires =
    numba # BSD 2-Clause "Simplified" License
    numpy  # BSD 3-Clause
    matplotlib #==v3.4.3  # Python Software Foundation License (PSFL) -> BSD-style
    scipy  # BSD 3-Clause license
    pandas  # BSD 3-Clause license
    openpyxl  # MIT license
    xlsxwriter # BSD 3-Clause license
    holoviews # BSD 3-Clause 
    spatialpandas # BSD 3-Clause 
    ipympl==0.9.3 #  BSD-3-Clause license 
    ipywidgets==8.0.4 #  BSD-3-Clause license 
    jupyterlab==3.6.3 # "MIT" license
    
[options.packages.find]  # (always `find` even if `find_namespace:` was used before)
# This section is optional as well as each of the following options:
#where=src  # . by default
exclude = pySailingVLM.tests*

[options.entry_points]
console_scripts = 
    pySailingVLM = pySailingVLM.runner.cli:main